# cpp_starter_project

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: build.yml
.github/workflows/script/: download_cmake_ninja.sh  test.sh
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  PrecompiledHeaders.cmake  ProjectSettings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
cmake/Scripts/: Conan.cmake  Doxygen.cmake  InterproceduralOptimization.cmake  PrecompiledHeaders.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Testing.cmake  Warnings.cmake
include/Math/: Factorial.hpp
src/: main.cpp
src/Math/: Factorial.cpp
test/: CMakeLists.txt  test.cpp
